--- a/ind.html
+++ b/ind.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My copy</title>
+    <title>My Wallpaper</title>
     <link rel="stylesheet" href="sty.css">
 </head>
 <body>
